...
    viewModel: TipsViewModel = koinViewModel(),
) {
    val tips by viewModel.tips.collectAsStateWithLifecycle()

    LazyVerticalStaggeredGrid(
        modifier = Modifier
            .semantics { contentDescription = "Scroll" },
        columns = StaggeredGridCells.Adaptive(minSize = 300.dp),
    ) {
        items(
            items = tips,
            key = { it.id },
            contentType = { "tip_item" },
...
