...
    val route = navBackStackEntry.value?.destination?.route
    if (route == "commands") {
        val showSearch = remember { mutableStateOf(true) }

        TopAppBar(title = {
            Text("Commands",
                modifier = Modifier.semantics { contentDescription = "TopAppBarTitle" })
        },
            backgroundColor = MaterialTheme.colors.primary,
            contentColor = Color.White,
            navigationIcon = if (showSearch.value) {
                {
                    IconButton(onClick = {
...
                if (showSearch.value) {
                    OutlinedTextField(
                        modifier = Modifier
                            .fillMaxWidth()
                            .padding(vertical = 2.dp)
                            .focusRequester(focusRequester)
                            .semantics { contentDescription = "SearchField" },
                        value = textFieldValue.value,
                        onValueChange = { tfv ->
                            if (showSearch.value) {
                                textFieldValue.value = tfv
                            }
                        },
...
